test_suite/tests/compile-fail/private_flags.stderr
error[E0603]: struct `Flags2` is private
  --> $DIR/private_flags.rs:18:26
   |
18 |     let flag2 = example::Flags2::FLAG_B;
   |                          ^^^^^^ private struct
   |
note: the struct `Flags2` is defined here
  --> $DIR/private_flags.rs:5:5
   |
5  | /     bitflags! {
6  | |         pub struct Flags1: u32 {
7  | |             const FLAG_A = 0b00000001;
8  | |         }
...  |
12 | |         }
13 | |     }
   | |_____^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
